--- a/index.html
+++ b/index.html
@@ -638,9 +638,9 @@
                         <h4 class="h6">Where to Find Us</h4>
         
                         <p>
-                        ... <br>
-                        ... <br>
-                        94043  Singapore
+                        111 Somerset Road #06-07 <br>
+                        TripleOne Somerset <br>
+                        Singapore 238164
                         </p>
                     </div>
 
@@ -659,8 +659,8 @@
         
                         <ul class="contact-list">
                             <li><a href="mailto:#0">info@tanalhari.com</a></li>
-                            <li><a href="tel:197-543-2345">+123 456 789</a></li>
-                            <li><a href="tel:197-123-9876">+123 456 789</a></li>
+                            <li><a href="tel:197-543-2345">+852 6576 9777</a></li>
+                            <li><a href="tel:197-123-9876">+966 545 994 337</a></li>
                         </ul>
                     </div>
                 </div> <!-- end s-footer__top -->
